--- a/css/variables.scss
+++ b/css/variables.scss
@@ -8,3 +8,5 @@ $logocolor2:#503c3cfb;
 $homeColorFont:#351f03;
 $spanFont:#3b3535d7;
 $btn-more:#6b5e44d3;
+$nameFamillyFont: 'Rubik';
+$montreatFamilly:'Montserrat';
