--- a/css/globals.css
+++ b/css/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500;700;900&display=swap");
 html {
   font-size: 100%;
   -webkit-box-sizing: border-box;
@@ -19,6 +20,10 @@ body {
   font-family: 'Montserrat', sans-serif;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+section {
+  padding: 100px 0;
 }
 
 a {
