--- a/css/globals.scss
+++ b/css/globals.scss
@@ -1,5 +1,6 @@
 @import "variables";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500;700;900&display=swap');
 html {
     font-size: 100%;
     box-sizing: border-box;
@@ -17,6 +18,10 @@ body {
     background: $mainColorBackground;
     font-family: 'Montserrat', sans-serif;
     box-sizing: border-box;
+}
+
+section {
+    padding: 100px 0;
 }
 
 a {
