--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500;700;900&display=swap");
 html {
   font-size: 100%;
   -webkit-box-sizing: border-box;
@@ -19,6 +20,10 @@ body {
   font-family: 'Montserrat', sans-serif;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+section {
+  padding: 100px 0;
 }
 
 a {
@@ -60,6 +65,7 @@ a {
 .navbar .logo a {
   font-size: 35px;
   font-weight: 600;
+  font-family: "Rubik";
   color: #9ce499fb;
 }
 
@@ -137,12 +143,15 @@ a {
 
 .home-content .text-1 {
   font-size: 27px;
+  font-weight: 600;
+  font-family: "Montserrat", sans-serif;
 }
 
 .home-content .text-2 {
   font-size: 75px;
-  font-weight: 600;
+  font-weight: 700;
   margin-left: -3px;
+  font-family: "Rubik", sans-serif;
 }
 
 .home-content .text-3 {
@@ -153,5 +162,23 @@ a {
 .home-content .text-3 span {
   color: #d61939;
   font-weight: 700;
+}
+
+.about {
+  font-family: "Montserrat", sans-serifmontreatFamilly, sans-serif;
+}
+
+.about .title {
+  font-family: "Montserrat";
+  text-align: center;
+  font-size: 45px;
+  font-weight: 600;
+}
+
+.about .about-content .left img {
+  height: 400px;
+  width: 400px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 /*# sourceMappingURL=styles.css.map */
