--- a/css/styles.scss
+++ b/css/styles.scss
@@ -14,6 +14,7 @@
     .logo a {
         font-size: 35px;
         font-weight: 600;
+        font-family: $nameFamillyFont;
         color: $logocolor1;
         span {
             color: $logocolor2;
@@ -84,11 +85,14 @@
 .home-content {
     .text-1 {
         font-size: 27px;
+        font-weight: 600;
+        font-family: $montreatFamilly, sans-serif;
     }
     .text-2 {
         font-size: 75px;
-        font-weight: 600;
+        font-weight: 700;
         margin-left: -3px;
+        font-family: $nameFamillyFont, sans-serif;
     }
     .text-3 {
         font-size: 40px;
@@ -96,6 +100,23 @@
         span {
             color: $navColor;
             font-weight: 700;
+        }
+    }
+}
+
+.about {
+    font-family: $montreatFamilly, sans-serifmontreatFamilly, sans-serif;
+    .title {
+        font-family: $montreatFamilly;
+        text-align: center;
+        font-size: 45px;
+        font-weight: 600;
+    }
+    .about-content {
+        .left img {
+            height: 400px;
+            width: 400px;
+            object-fit: cover;
         }
     }
 }
